--- a/Projects/Проект 1. Исследование надежности заемщиков.ipynb
+++ b/Projects/Проект 1. Исследование надежности заемщиков.ipynb
@@ -2,30 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e2b966bd",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "c81daeeb"
-   },
+   "metadata": {},
    "source": [
-    "# Исследование надежности заемщиков\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ba2cb1e",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "id": "827c20bf"
-   },
-   "source": [
-    "Во второй части проекта вы выполните шаги 3 и 4. Их вручную проверит ревьюер.\n",
-    "Чтобы вам не пришлось писать код заново для шагов 1 и 2, мы добавили авторские решения в ячейки с кодом. \n",
-    "\n"
-   ]
-  },
+    "# Исследование надёжности заёмщиков\n",
+    "\n",
+    "Заказчик — кредитный отдел банка. Нужно разобраться, влияет ли семейное положение и количество детей клиента на факт погашения кредита в срок. Входные данные от банка — статистика о платёжеспособности клиентов.\n",
+    "\n",
+    "Результаты исследования будут учтены при построении модели **кредитного скоринга** — специальной системы, которая оценивает способность потенциального заёмщика вернуть кредит банку.\n",
+    "\n",
+    "\n",
+    "<font color=006699>\n",
+    "\n",
+    "    \n",
+    "Цель работы - ответить на вопросы: <br>\n",
+    "-Есть ли зависимость между наличием детей и возвратом кредита в срок?<br>\n",
+    "-Есть ли зависимость между семейным положением и возвратом кредита в срок?<br>\n",
+    "-Есть ли зависимость между уровнем дохода и возвратом кредита в срок?<br>\n",
+    "-Как разные цели кредита влияют на его возврат в срок?<br>\n",
+    "    \n",
+    "    \n",
+    "Работать будем с выгрузкой данных data.csv. <br>Планируем изучить данные визуально, предобработать их заменив пропуски, исключить дублирование, если оно есть. Также планируем лемматизировать данные для дальнейшего анализа и категоризации.<br>\n",
+    "\n",
   {
    "cell_type": "markdown",
    "id": "7080a5ef",
